--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ serde_derive = "~1"
 serde_json = "~1"
 toml = "0.4"
 walkdir = "1"
-maplit = "*"
-mime = "*"
+maplit = "0.1"
+mime = "0.3"
+regex = "0.2"
