--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ jsonwebtoken = "3"
 rust-crypto = "0.2"
 data-encoding = "1.2"
 handlebars = "0.29"
-diesel = { version = "0.16", features = ["mysql"] }
+diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", features = ["mysql"] }
 lazy_static = "0.2"
 serde = "1"
 serde_derive = "1"
